# main

./: MZKO1.py  MZKO2.py  MZKO3.py  flowchart.html  portfolio_backup.pkl
Main-2/: README.md  config.json  portfolio.pkl  portfolio_report.csv  prices.json  pyproject.toml  report.csv  task-1.py  task-2.py  task-3.py  task-4.py  task-5.py  task-6.py  task-7.py
Task-4/: 319.py  334.py  335.py  336.py  384.py
Task-7/: 607.py  609.py  638.py  640.py  669.py  671.py
Task-8/: 739.py  741.py  770.py  772.py
task-3/: 218.py  233.py  242.py  262.py  276.py  279.py
task-5/: 437.py  468.py  475.py  489.py  490.py  496.py
task-6/: 506.py  508.py  538.py  540.py  570.py  572.py
