[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto_portfolio_tracker"
version = "1.0.0"
authors = [
  { name="Савлук М. Ю.", email="student@vntu.edu.ua" }
]
description = "Консольний застосунок для управління криптовалютним портфелем"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []